objects/copado__Snapshot_Difference__c.object
<CustomObject>
    <fields>
        <fullName>copado__Destination_Git_Commit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Git Commit</label>
        <referenceTo>copado__Git_Org_Commit__c</referenceTo>
        <relationshipLabel>Snapshot Differences (Destination Git Commit)</relationshipLabel>
        <relationshipName>Snapshot_Differences1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Destination_Option__c</fullName>
        <label>Destination Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Git Commit</fullName>
                </value>
                <value>
                    <fullName>Salesforce Org</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Destination_Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Credential</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Snapshot Differences (Destination Credential)</relationshipLabel>
        <relationshipName>Snapshot_Differences1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Format__c</fullName>
        <description>Salesforce configuration files are in the XML format. You can change it to a different format for a faster comparison time and better readability of the differences.</description>
        <inlineHelpText>Salesforce configuration files are in the XML format. You can change it to a different format for a faster comparison time and better readability of the differences.</inlineHelpText>
        <label>Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>XML</fullName>
                    <default>true</default>
                    <label>XML</label>
                </value>
                <value>
                    <fullName>YAML</fullName>
                </value>
                <value>
                    <fullName>JSON</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Last_Run__c</fullName>
        <label>Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Partial_Selection__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To calculate the differences only of selected files, select this checkbox.</inlineHelpText>
        <label>Partial Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Source_Git_Commit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Git Commit</label>
        <referenceTo>copado__Git_Org_Commit__c</referenceTo>
        <relationshipLabel>Snapshot Differences</relationshipLabel>
        <relationshipName>Snapshot_Differences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Source_Option__c</fullName>
        <label>Source Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Git Commit</fullName>
                </value>
                <value>
                    <fullName>Salesforce Org</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Source_Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Credential</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Snapshot Differences</relationshipLabel>
        <relationshipName>Snapshot_Differences</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Snapshot Difference</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Partial_Selection__c</columns>
        <columns>copado__Source_Option__c</columns>
        <columns>copado__Destination_Option__c</columns>
        <columns>copado__Source_Git_Commit__c</columns>
        <columns>copado__Source_Org_Credential__c</columns>
        <columns>copado__Destination_Git_Commit__c</columns>
        <columns>copado__Destination_Org_Credential__c</columns>
        <columns>copado__Last_Run__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Snapshot Difference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshot Differences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>